  * [x86] asus-laptop: Do not call HWRS on init (Closes: #692436)
  * [x86] drm/i915: Only kick out vesafb if we takeover the fbcon with KMS
    (Closes: #686284)
  * [!x86] radeon: Disable DRM_RADEON_KMS, as this is still not expected to
    work
  * radeon: Disable KMS earlier if firmware is not installed (Closes: #607194)
  * [amd64] linux-image: Include VIA Nano in package description

  [ Ian Campbell ]
  * [xen] add support for microcode updating. (Closes: #693053)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 18 Nov 2012 01:30:28 +0000

linux (3.2.32-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.31
    - target: Fix ->data_length re-assignment bug with SCSI overflow
    - hpsa: fix handling of protocol error
    - cifs: fix return value in cifsConvertToUTF16
    - asix: Support DLink DUB-E100 H/W Ver C1 (Closes: #687567)
    - dj: memory scribble in logi_dj
    - dm: handle requests beyond end of device instead of using BUG_ON
    - md/raid10: fix "enough" function for detecting if array is failed.
    - libata: Prevent interface errors with Seagate FreeAgent GoFlex
    - vfs: dcache: fix deadlock in tree traversal
    - Revert "drm/radeon: rework pll selection (v3)" (regression in 3.2.30)
    - HID: hidraw: don't deallocate memory when it is in use
    - xfrm: Workaround incompatibility of ESN and async crypto
    - xfrm_user: fix various information leaks
    - xfrm_user: ensure user supplied esn replay window is valid
    - net: guard tcp_set_keepalive() to tcp sockets
    - ipv4: raw: fix icmp_filter()
    - ipv6: raw: fix icmpv6_filter()
    - ipv6: mip6: fix mip6_mh_filter()
    - netrom: copy_datagram_iovec can fail
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.32
    - mtd: nand: Use the mirror BBT descriptor when reading its version
    - TTY: ttyprintk, don't touch behind tty->write_buf
    - n_gsm: fix various serious bugs