@@ -2,6 +2,6 @@ Package: linux-image-@abiname@@localversion@-dbg
 Depends: linux-image-@abiname@@localversion@, ${misc:Depends}
 Section: debug
 Priority: extra
-Description: Debugging infos for Linux @abiname@@localversion@
- This package provides the binary debug image and pre-built debug loadable                                                     
- modules for Linux kernel @upstreamversion@ on @longclass@ machines.
+Description: Debugging symbols for Linux @abiname@@localversion@
+ This package provides the detached debugging symbols for the Linux kernel
+ and modules in linux-image-@abiname@@localversion@.
