@@ -75,6 +75,8 @@ linux (3.2.34-1) UNRELEASED; urgency=low
     work
   * radeon: Disable KMS earlier if firmware is not installed (Closes: #607194)
   * [amd64] linux-image: Include VIA Nano in package description
+  * linux-image-dbg: Change package description to use the phrase
+    'debugging symbols' and correct grammar
 
   [ Ian Campbell ]
   * [xen] add support for microcode updating. (Closes: #693053)
